# csecode

./: Cargo.toml  Dockerfile  README.md  pyproject.toml  roblox.json  roblox.py
.env/: .env  pyvenv.cfg
myenv/: pyvenv.cfg
src/: authenticate.rs  lib.rs  proxied_reqwest.rs  robloxian.rs  testing.rs
target-macos/: .rustc_info.json
target-macos/release/.fingerprint/autocfg-65d1c45df7892082/: lib-autocfg  lib-autocfg.json
target-macos/release/.fingerprint/cc-fdd8b07dd421d1cb/: lib-cc  lib-cc.json
target-macos/release/.fingerprint/httparse-a27a6c8080e7ad03/: build-script-build-script-build  build-script-build-script-build.json
target-macos/release/.fingerprint/libc-118ed0ed7e3a5800/: build-script-build-script-build  build-script-build-script-build.json
target-macos/release/.fingerprint/lock_api-0720188aaca31ca3/: build-script-build-script-build  build-script-build-script-build.json
target-macos/release/.fingerprint/once_cell-097199c12958d81d/: lib-once_cell  lib-once_cell.json
target-macos/release/.fingerprint/parking_lot_core-bcb9839134a97bd5/: build-script-build-script-build  build-script-build-script-build.json
target-macos/release/.fingerprint/proc-macro2-1229f9179c4c3b69/: build-script-build-script-build  build-script-build-script-build.json
target-macos/release/.fingerprint/proc-macro2-1e838058b1e4bfcc/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-macos/release/.fingerprint/python3-dll-a-095877158466c3e6/: lib-python3_dll_a  lib-python3_dll_a.json
(+29 files in other folders)
