[package]
name = "rblx_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rblx_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.5"
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.4.0", features = ["full", "fs"] }
futures = "0.3.31"
indicatif = "0.17.8"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["full", "test-util"] }
